Fix overflow

--- a/napelem-ui/src/app/components/diagrams/msmdata/measurement-data/measurement.data.component.css
+++ b/napelem-ui/src/app/components/diagrams/msmdata/measurement-data/measurement.data.component.css
@@ -1,6 +1,6 @@
 .container {
 	overflow: auto;
-	height: calc(100vh - 45px);
+	height: 80vh;
 }
 
 table {
